# Boeing747_orbiter_addon

./: LICENCE  README.md
Config/Vessels/: Boeing985_121.cfg  Boeing_747-100.cfg  Boeing_747-400.cfg  Boeing_747-8.cfg  Boeing_747-SCA.cfg  Boeing_747-SOFIA.cfg  Boeing_747SP.cfg  Boeing_747YAL1.cfg  Boeing_747_AAC.cfg  Boeing_747_Supertanker.cfg
Meshes/: Boeing_747SP.msh  Boeing_747_100.msh
Meshes/Boeing747/: Boeing_747SOFIA.msh  Boeing_747SP.msh  Boeing_747_100.msh  Boeing_747_400.msh  Boeing_747_8.msh  Boeing_747_AAC.msh  Boeing_747_LCF.msh  Boeing_747_SCA.msh  Boeing_747_Supertanker.msh  Boeing_747_YAL1.msh  Boeing_747_cockpit.msh  Boeing_747_first_class.msh  Boeing_985_121.msh  MFD1.msh
Scenarios/: (Current state).scn  B747-100.scn
Scenarios/Boeing 747/: 3 Jumbos.scn  4 Jumbos.scn  B747-100.scn  Boeing 747 Airborne Aircraft Carrier.scn  Boeing 747 Large Cargo Freighter.scn  Boeing 747 SOFIA.scn  Boeing 747 Shuttle Carrier Aircraft at KSC.scn  Boeing 747 Supertanker.scn  Boeing 747-100.scn  Boeing 747-400.scn  Boeing 747-8.scn  Boeing 747SP.scn
Textures/Boeing_747/B747SP/: Rear_left_landing_gear.dds  Vertical_stabilizer.dds
Textures/Boeing_747/B747_100/: ENG1.dds  Left_wing.dds
Textures/Boeing_747/B747_400/: ENG1.dds
Textures/Boeing_747/B747_8/: ENG1_blades.dds
Textures/Boeing_747/B747_AAC/: Vertical_stabilizer.dds  texture_interior.xcf
Textures/Boeing_747/B747_LCF/: ENG1.dds  Vertical_stabilizer.dds
Textures/Boeing_747/B747_SCA/: Vertical_stabilizer.dds
Textures/Boeing_747/B747_SOFIA/: Telescope.dds  Telescope_norm.dds  Vertical_stabilizer.dds
Textures/Boeing_747/B747_Supertanker/: ENG1.dds  Right_wing.dds
Textures/Boeing_747/B747_YAL1/: COIL.dds  ENG1.dds  Laser_sphere.dds  Laser_sphere_norm.dds  Left_wing.dds  Right_wing.dds  Vertical_stabilizer.dds
Textures/Boeing_747/B985_121/: Fuselage_norm.dds  Vertical_stab.dds  Vertical_stab_norm.dds
Textures/Boeing_747/Common/: Autopilot_panel.dds  Central_pedestal.dds  Cockpit_fuselage.dds  Front_landing_gear.dds  MFD_BTN.dds  MFDtex.dds  Main_windows.dds  Main_windows.xcf  Metal_chrome.dds  Screen.dds  WC_left.dds  (+10 more)
src/Blender/: Boeing_747SP.blend  Boeing_747SP_modificators.blend  Boeing_747_100.blend  Boeing_747_400.blend  Boeing_747_8.blend  Boeing_747_AAC.blend  Boeing_747_LCF.blend  Boeing_747_SCA.blend  Boeing_747_Supertanker.blend  Boeing_747_YAL1.blend  Boeing_747_cockpit.blend  Boeing_747_first_class.blend  Boeing_985_121.blend  Boeing_SOFIA.blend  MFD1.blend
src/Linux/: Boeing747SP.cpp  Boeing747SP.h  CMakeLists.txt
src/Linux/src_B747SOFIA/: 747SOFIAdefinitions.h  Boeing747SOFIA.cpp  Boeing747SOFIA.h  CMakeLists.txt  DrawAPI.h  GraphicsAPI.h  MFDAPI.h  VesselAPI.h  meshres.h
src/Linux/src_B747SP/: 747FCdefinitions.h  747SPdefinitions.h  Boeing747SP.cpp  Boeing747SP.h  CMakeLists.txt  CamAPI.h  Instrument.cpp  Instrument.h  src_B747SP.code-workspace
src/Linux/src_B747SP/G42-200 sample/: G422_ANIMATIONS.cpp  G422_AUX.cpp  G422_DVC_DISPLAYS.cpp  G422_DVC_SETUP.cpp  G422_ENG_APUSYS.cpp  G422_ENG_OMS.cpp  G422_ENG_RAMCASTER.cpp  G422_ENG_RCS.cpp  G422_ENG_RT66.cpp  G422_OAPI.cpp  G422_SCENARIO_RW.cpp  G422_SIM_CONTROLS.cpp  G422_SIM_DYNAMICS.cpp  G422_VSL_SETUP.cpp  G422_VSL_UPDATE.cpp
src/Linux/src_B747SP/G42-200 sample/Headers/: G422.h  G422_DVC.h  G422_MDL_DVC.h  G422_MDL_EXT.h  resource.h
src/Linux/src_B747_100/: 747100definitions.h  747cockpitdefinitions.h  Boeing747_100.cpp  Boeing747_100.h  CMakeLists.txt  CelBodyAPI.h  src_B747-100.code-workspace
src/Linux/src_B747_400/: 747400definitions.h  747FCdefinitions.h  747cockpitdefinitions.h  Boeing747_400.cpp  Boeing747_400.h  CMakeLists.txt  ModuleAPI.h  ScnEditorAPI.h  compilar_cmake.sh
src/Linux/src_B747_8/: 7478definitions.h  747FCdefinitions.h  747cockpitdefinitions.h  Boeing747_8.cpp  Boeing747_8.h  CMakeLists.txt
src/Linux/src_B747_AAC/: 747AACdefinitions.h  747cockpitdefinitions.h  Boeing747_AAC.cpp  Boeing747_AAC.h  CMakeLists.txt
src/Linux/src_B747_LCF/: 747LCFdefinitions.h  Boeing747_LCF.cpp  Boeing747_LCF.h  CMakeLists.txt
src/Linux/src_B747_SCA/: 747SCAdefinitions.h  Boeing747_SCA.cpp  Boeing747_SCA.h  CMakeLists.txt  OrbiterAPI.h  Orbitersdk.h  src_B747_SCA.code-workspace
src/Linux/src_B747_Supertanker/: 747STdefinitions.h  Boeing747_Supertanker.cpp  Boeing747_Supertanker.h  CMakeLists.txt  src_B747_Supertanker.code-workspace
src/Linux/src_B747_YAL1/: 747YAL1definitions.h  Boeing747_YAL1.cpp  Boeing747_YAL1.h  CMakeLists.txt
src/Linux/src_B985_121/: B985121definitions.h  Boeing985_121.cpp  Boeing985_121.h  CMakeLists.txt
src/Linux/src_Boeing 747-100/: 747100definitions.h  Boeing747_100.cpp  Boeing747_100.h
src/Linux/src_Boeing 747SP/: 747SPdefinitions.h  747cockpitdefinitions.h  Boeing747SP.cpp  Boeing747SP.h
src/Linux/src_Boeing747SCA/: 747SCAdefinitions.h  Boeing747_SCA.cpp  Boeing747_SCA.h
src/Linux/src_Boeing747_Supertanker/: 747STdefinitions.h
src/Windows/: Boeing747SP.cpp  Boeing747SP.h  CMakeLists.txt
src/Windows/src_B747SOFIA/: Boeing747SOFIA.cpp  Boeing747SOFIA.h  CMakeLists.txt
src/Windows/src_B747SP/: 747SPdefinitions.h  Boeing747SP.cpp  Boeing747SP.h  CMakeLists.txt
src/Windows/src_B747_100/: 747100definitions.h  Boeing747_100.cpp  Boeing747_100.h  CMakeLists.txt
src/Windows/src_B747_400/: 747400definitions.h  747cockpitdefinitions.h  Boeing747_400.cpp  Boeing747_400.h  CMakeLists.txt
src/Windows/src_B747_8/: 7478definitions.h  Boeing747_8.cpp  Boeing747_8.h  CMakeLists.txt
src/Windows/src_B747_AAC/: 747AACdefinitions.h  Boeing747_AAC.cpp  Boeing747_AAC.h  CMakeLists.txt
src/Windows/src_B747_LCF/: 747LCFdefinitions.h  Boeing747_LCF.cpp  Boeing747_LCF.h  CMakeLists.txt
src/Windows/src_B747_SCA/: 747SCAdefinitions.h  Boeing747_SCA.cpp  Boeing747_SCA.h  CMakeLists.txt
src/Windows/src_B747_Supertanker/: 747STdefinitions.h  Boeing747_Supertanker.cpp  Boeing747_Supertanker.h  CMakeLists.txt
src/Windows/src_B747_YAL1/: 747YAL1definitions.h  Boeing747_YAL1.cpp  Boeing747_YAL1.h  CMakeLists.txt
src/Windows/src_B985_121/: Boeing985_121.cpp  Boeing985_121.h  CMakeLists.txt
(+62 files in other folders)
